# component-data-gateway

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: push.yml
component_config/: component_long_description.md  component_short_description.md  documentationUrl.md  licenseUrl.md  sourceCodeUrl.md
scripts/: update_kbc_config_tag.sh
src/: component.py  configuration.py  load_tables_dataclass.py
tests/: test_component.py
tests/data/clean_workspace/: config.json
tests/data/clone_mode/: config.json
tests/data/clone_mode/in/tables/: orders.csv
tests/data/full_load_basic/: config.json
tests/data/full_load_basic/in/tables/: users.csv
tests/data/full_load_with_pk/: config.json
tests/data/full_load_with_pk/in/tables/: products.csv
tests/data/incremental_adaptive/: config.json
tests/data/incremental_adaptive/in/: state.json
tests/data/incremental_adaptive/in/tables/: events.csv
tests/data/incremental_fixed_time/: config.json
tests/data/incremental_fixed_time/in/tables/: logs.csv
tests/data/workspace_discovery/: config.json
tests/data/workspace_from_config/: config.json
tests/data/workspace_from_config/in/tables/: users.csv
